name:                hkdf
version:             0.0.1.0
synopsis:            Implementation of HKDF (RFC 5869)
description:         Please see README.md
homepage:            http://github.com/j1r1k/hkdf
license:             BSD3
license-file:        LICENSE
author:              Jiri Marsicek <jiri.marsicek@gmail.com>
maintainer:          Jiri Marsicek <jiri.marsicek@gmail.com>
copyright:           Jiri Marsicek <jiri.marsicek@gmail.com>
category:            Cryptography,Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.HKDF
  build-depends:       base >= 4.7 && < 5
                     , byteable
                     , bytestring
                     , cryptohash

  default-language:    Haskell2010


test-suite hkdf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , byteable
                     , bytestring
                     , cryptohash
                     , hkdf
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/j1r1k/hkdf
